# opengamma

./: .gitignore  LICENSE  README.md  classifier_tensors.json  main.py  model.py  pyproject.toml
benchmarks/: README.md  model_benchmark.py  prompt_benchmark.py  prompt_classifier_benchmark.py  theoretical_max.py
dataset/: .gitignore  README.md  dedup_upload.py  deduplicate_dataset.py  example.py  extract_dataset.py  upload_dataset.py
prompt_classifier/: train.py
results/deduplication/: deduplication_report.json
results/model_benchmark/: benchmark_results_20251117_064228.json  benchmark_results_20251117_071556.json  benchmark_results_20251117_072019.json  benchmark_results_20251117_072744.json  benchmark_results_20251117_202531.json  benchmark_results_20251117_233457.json
results/prompt_benchmark/: prompt_benchmark_results_20251117_074713.json  prompt_benchmark_results_20251118_031611.json  prompt_benchmark_results_basic.json  prompt_benchmark_results_detailed.json  prompt_benchmark_results_minimal_and_structured.json  prompt_benchmark_results_original.json
results/prompt_classifier/: prompt_classifier_1000_max_iter.json  prompt_classifier_10_max_iter.json  prompt_without_classifier.json
